2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: If not on Skyeye, do not include the rtl8019 driver
	in libbsp.

2009-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Add default value.

2009-08-22	Xi Yang <hiyangxi@gmail.com>

	* fb/fb.c: Register correct device name.
	* startup/bspstart.c: Fix warnings.

2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-08-21	Xi Yang <hiyangxi@gmail.com>

	* Makefile.am: Add fb/fb.c add rtl8019 Ethernet card support
	* preinstall.am: Install skyeye_fb.h, Install wd80x3
	* fb/fb.c, fb/skyeye_fb.h: Framebuffer support for skyeye simulator
	* rtl8019/wd80x3, rtl8019/rtl8019.c: rtl8019 support
	* startup/memmap.c: Change the size of Map I/O to 1216M
	* bsp/bsp.h: Add rtl8019 related infomation

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-07-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Fix typo.

2009-07-10	Xi Yang <hiyangxi@gmail.com>

	* Makefile.am: Complete update to current style.

2009-06-29	Xi Yang <hiyangxi@gmail.com>

	* Makefile.am: Update to current style.
	* bsp_specs: Fix warning for _start.
	* start/start.S: Proper attribution for origin.
	* startup/bspstart.c: Add Skyeye bsp_reset() on Skyeye.
	* include/.cvsignore: New file.
	* include/bspopts.h.in: Removed.

2009-06-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/linkcmds: Fix spacing.

2009-06-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, include/bspopts.h.in: Add ON_SKYEYE option to at least
	enable fast idle mode. Also added some standard BSP options.
