@@ -26,7 +26,8 @@ AM_CONDITIONAL(ON_SKYEYE,test "$ON_SKYEYE" = "1")
 RTEMS_CHECK_NETWORKING 
 AM_CONDITIONAL(HAS_NETWORKING,test "$HAS_NETWORKING" = "yes")
 
-RTEMS_BSP_CLEANUP_OPTIONS(0, 1)
+RTEMS_BSP_BOOTCARD_OPTIONS
+RTEMS_BSP_CLEANUP_OPTIONS(1, 1)
 
 # Explicitly list all Makefiles here
 AC_CONFIG_FILES([Makefile])
